# 3dmathbenchmark

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  doctest.cpp  main.cpp  nanobench.cpp
ksmath/: CMakeLists.txt  ksmath.cpp  ksmath.hpp
lxdmath/: CMakeLists.txt  MathUtils.hpp  Matrix.cpp  Matrix.hpp  Quaternion.hpp  SIMD_SSE.hpp
mj2math/: CMakeLists.txt  MathUtils.hpp  Matrix.cpp  Matrix.hpp  SIMD_NEON.cpp  SIMD_NEON.hpp  SIMD_SSE.hpp
ovrmath/: CMakeLists.txt  OVR_Math.cpp
